--- a/examples/nginx-with-annotation.yaml
+++ b/examples/nginx-with-annotation.yaml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx-with-label
+  name: nginx-with-annotation
   labels:
     team: finance
-    version: 1.4.5
-    environment: production
+    version: 1.0.1
+    environment: development
+  annotations:
+    description: Ini adalah deskripsi
 spec:
   containers:
     - name: nginx
