--- a/examples/nginx-with-label.yaml
+++ b/examples/nginx-with-label.yaml
@@ -1,7 +1,11 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx
+  name: nginx-with-label
+  labels:
+    team: finance
+    version: 1.4.5
+    environment: production
 spec:
   containers:
     - name: nginx
